--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,28 +32,30 @@
                 </span>
     
                 <!-- Search form -->
-                <form class="d-flex mx-auto px-1">
+                <form class="d-flex mx-auto px-1" method="post" action="/filtered_ads">
                     <div class="input-group search-input-container" style="width:47vw;">
-                        <input id="search-nav" class="form-control search-input" type="search" placeholder="Search in Clicktips.com" aria-label="Search">
+                        <input id="search-nav" class="form-control search-input" type="search" name="search_query" placeholder="Search in Clicktips.com" aria-label="Search">
                         <span class="input-group-text search-icon">
                             <button type="submit" class="btn search-button px-2">
-                            <!-- Conteúdo SVG da lupa -->
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="24" height="24">
-                                <path d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"></path>
-                            </svg>
+                                <!-- Conteúdo SVG da lupa -->
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="24" height="24">
+                                    <path d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"></path>
+                                </svg>
                             </button>
                         </span>
                     </div>
                 </form>
+                
             </div>
             <!-- End of navigation content -->
     
             <!-- Toggle button for navbar -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false"
-                aria-label="Toggle navigation" >
-                <span class="navbar-toggler-icon custom-toggler-icon"></span>
-            </button>
+            <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
+            data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false"
+            aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon custom-toggler-icon"></span>
+    </button>
+    
     
             <!--   Login section -->
             <div class="navbar-nav ms-auto">
@@ -162,6 +164,20 @@
 
 </body>
 
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+    var cardLabels = document.querySelectorAll('.card.label-clickable');
+
+    cardLabels.forEach(function (cardLabel, index) {
+      cardLabel.addEventListener('click', function () {
+        var form = document.getElementById('form_' + index);
+        if (form) {
+          form.submit();
+        }
+      });
+    });
+  });
+</script>
 <!-- Main.js-->
 <script src="static/js/main.js"></script>
 <!--Bootstrap 5-->
