little changes on layout,

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,25 +5,17 @@
 {% endblock %}
 
 {% block main %}
-<div class="container-xxl d-flex flex-column custon-cardbody p-0 pt-0  ">
-    <!-- Messages-->
+<div class="container-xxl d-flex flex-column custon-cardbody p-0 pt-0 position-relative">
+    <!-- Messages -->
     {% if error %}
-        <div class="row justify-content-center">
-            <div class="col-md-6">
-                <div class="alert alert-danger flash-alert text-center" role="alert">
-                    {{ error }}
-                </div>
-            </div>
+        <div class="alert alert-danger flash-alert text-center" role="alert">
+            {{ error }}
         </div>
     {% endif %}
-    
+
     {% if success_message %}
-        <div class="row justify-content-center ">
-            <div class="col-md-6">
-                <div class="alert alert-success flash-alert text-center" role="alert">
-                    {{ success_message }}
-                </div>
-            </div>
+        <div class="alert alert-success flash-alert text-center" role="alert">
+            {{ success_message }}
         </div>
     {% endif %}
 
