--- a/templates/layout.html
+++ b/templates/layout.html
@@ -56,7 +56,6 @@
         <span class="navbar-toggler-icon custom-toggler-icon"></span>
     </button>
     
-    
             <!--   Login section -->
             <div class="navbar-nav ms-auto">
                 {% if g.display_username %}
@@ -82,7 +81,6 @@
         </div>
         <!--  End of nav content working with git-->
     </nav>
-
 
 <!--   SEGUNDA NAVIGATION -->
 <nav class="navbar navbar-expand-md navbar-dark bg-primary navbar-custom border-3 mb-4" id="nav-container">
@@ -124,7 +122,7 @@
                 <li class="nav-item d-md-none">
                     <a class="nav-link text-white" href="#" id="loginMobile">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-log-in"><path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"/><polyline points="10 17 15 12 10 7"/><line x1="15" y1="12" x2="3" y2="12"/></svg>
-                        {{display_username}}</a>
+                        {{g.display_username}}</a>
                 </li>
                 <li class="nav-item d-md-none">
                     <a class="nav-link text-white" href="/logout" id="registerMobile">
