--- a/templates/renderUserAD.html
+++ b/templates/renderUserAD.html
@@ -16,11 +16,11 @@
         });      
     </script>
 
-    <div class="container-xxl p-3 d-flex flex-column p-2 rounded border border-1 d-block bg-white pt-4 " style="font-family: 'Montserrat', sans-serif;">
-        <div class="card-header bg-dark text-white h-25 text-center">
-            <a href="/announce" class="d-block mx-auto">
-                <img class="img-fluid navbar-brand" id="categoryImage" alt="Logo">
-            </a>
+<div class="container-xxl p-3 d-flex flex-column p-2 rounded border border-1 d-block bg-white pt-4" style="font-family: 'Montserrat', sans-serif;">
+    <div class="card-header bg-dark text-white h-25 text-center">
+        <a href="/announce" class="d-block mx-auto">
+            <img class="img-fluid navbar-brand" id="categoryImage" alt="Logo">
+        </a>
             
             <h4 class="mb-0 tw-bold p-2 "> 
                  {{logoHeader}} announce !
@@ -30,15 +30,16 @@
 
         <div class="card-body hide-on-small-screens custon-cardbody">
             <div class="row">
-                <div class="col-12 col-lg-8">
-                    <div class="card-body mx-3 rounded shadow-lg"> 
-                        <div class="shadow-sm bg-light p-3 mb-5 rounded">
-                            <h1 class="tw-bold, text-black">{{data['title']}}</h1>
-                            <div>
+                <div class="col-12 col-lg-8 col-sm-12">
+                    <div class="card-body  rounded shadow-lg d-md-block d-lg-block"> 
+                        <div class="shadow-sm bg-light p-3 mb-5 rounded container-fluid">
+                            <h3 class="tw-bold text-black d-lg-text " style="font-size: 3vw!important;">{{ data['title'] }}</h3>
+
                                 {% for ad in image_data %}
-                                    <img class="img-fluid" src="data:image/png;base64, {{ ad['image_data'] }}" style="height: 500px; width: auto;" alt="">
+                                <div class="d-flex justify-content-center">
+                                    <img class="img-fluid mw-100  card_hover" src="data:image/png;base64, {{ ad['image_data'] }}" alt="">
+                                </div>
                                 {% endfor %}
-                            </div>
                         </div>
                         {% for type_data in info_data %}
                         {% set conditions = type_data['Conditions'] %}
@@ -62,8 +63,8 @@
                             'PreOwnedCars': {'First': 'Model', 'Second': 'Transmission', 'Tirth': 'Engine', 'Forth': 'Doors'}
                         } %}
                         
-                        <div class="bg-white mt-3 rounded shadow-lg">
-                            <h3 class="text-center mt-3">Main features</h3>
+                        <div class="bg-white mt-3 rounded shadow-lg ">
+                            <h3 class="text-center mt-3 ">Main features</h3>
                             <ul class="list-unstyled pt-5 ms-sm-0 ms-md-5 d-flex flex-wrap justify-content-center justify-content-md-start">
                                 {% if data['announcement_type'] in ['RealState', 'PreOwnedCars'] %}
                                 {% for attribute, label in [('First', 'Type'), ('Second', 'Rooms'), ('Tirth', 'Bathrooms'), ('Forth', 'Garage')] %}
@@ -84,7 +85,7 @@
                             {% endif %}
                             {% if data['announcement_type'] != 'RealState' and data['announcement_type'] != 'PreOwnedCars' %}
                                 <li class="mb-2 pb-3 text-center text-md-start d-flex align-items-center col-12 col-md-6">
-                                    <img class="img-fluid mr-2 img-fluid propretyAtributes iconsConditions"  alt="">
+                                    <img class="img-fluid mr-2  img-fluid propretyAtributes iconsConditions"  alt="contition State {{ type_data['Conditions'] }}">
                                     <h4 class="text-secondary mb-0 ms-3 me-3">Condition: {{ type_data['Conditions'] }}</h4>
                                 </li>
                                 <li class="mb-2 pb-3 text-center text-md-start d-flex align-items-center col-12 col-md-6">
@@ -111,8 +112,8 @@
                         </div>
                         <div class="text-center  text-black bg-light mt-4 rounded shadow-sm vr text-md text-sm" 
                         >
-                            <h2 >Description</h2>
-                            <hr>
+                            <h2 class=" ">Description</h2>
+                        
                             <h4 >${{ type_data['Price']}}</h4>
                             <hr>
                             <h4 class="mt-3 text-secondary ">{{ data['description'] }} </h4>
