render message buged , fuckkk

--- a/templates/renderUserAD.html
+++ b/templates/renderUserAD.html
@@ -110,6 +110,18 @@
                             <img class="img-fluid mr-2" src="../static/assets/image/icons8-phone-50.png" style="height: 28px; width: 28px;" alt="Contact">
                             <h3 class="text-center tw-light mb-0">{{ type_data['Contact'] }}</h3>
                         </div>
+                    
+                        {% if owner_ad_data != g.display_username %}
+                            <form class="w-75 h-15 mx-auto d-block" action="/chat" method="get">
+                                <button type="submit" id="announceBtn" class="btn btn-light btn-outline text-secondary price-container w-75 h-15 mx-auto d-block">
+                                    <img class="img-fluid w-15 h-15" src="/static/assets/image/icons8-chat-100.png" alt="chat">
+                                    CHAT
+                                    <input type="hidden" name="openChat" value="True">
+                                </button>
+                            </form>
+                        {% endif %}
+                        
+                                                                                          
                         <div class="text-center  text-black bg-light mt-4 rounded shadow-sm vr text-md text-sm" 
                         >
                             <h2 class=" ">Description</h2>
@@ -156,6 +168,7 @@
                                 {% endif %}
                             </ul>
                         </div>
+
                     {% endif %}                                                                                                                    
                     {% endfor %}
                 </div>
