--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -203,7 +203,9 @@ body {
 }
 /* Styles for screens larger than 600 pixels */
 @media (min-width: 600px) {
-
+    .list-group-numbered {
+        display: none!important;
+      }
 
     .search-input-container {
         width: 80vw;
