--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -202,10 +202,13 @@ body {
     min-width: 60px;
 }
 /* Styles for screens larger than 600 pixels */
-@media (min-width: 600px) {
+@media (max-width: 600px) {
     .list-group-numbered {
         display: none!important;
       }
+}
+@media (min-width: 600px) {
+
 
     .search-input-container {
         width: 80vw;
