--- a/templates/chat.html
+++ b/templates/chat.html
@@ -9,7 +9,8 @@
     <div class="card-header bg-dark text-white  text-center">
         <h2 class="pt-3 title">My messages</h2>
         <hr>
-    
+
+     
         {% if new_chat == False and not user_messages %}
             <h5 class="mx-auto mt-3 pb-3 title price-container">Sorry you don't have any message yet</h5>
             <img class="img-fluid w-25 h-25 mx-auto mt-5 d-block" src="/static/assets/image/icons8-chat-100.png" alt="no messages" >
@@ -18,40 +19,69 @@
             <div class="card-body bg-dark text-white text-center px-0 px-mb-3 rounded">
                 <div class="row">
                     <div class="col-4 col-md-3 col-lg-4 border border-1 mb-3 mb-lg-0 bg-white" >
+                        {% if new_chat == 'True' %}
+                        <!-- New Message-->
+                        <li class="overflow-visible list-group-item  list-group-item-action d-flex justify-content-between align-items-start active mt-3 rounded custon-cardbord overflow-hidden " aria-current="true">
+                          <div class="ms-0 md-ms-2 w-100">
+                            {% for data in announce_data %}
+                              <div class=" d-flex flex-row">
+                                <img class="img-fluid  col-md-3"  src="data:image/png;base64, {{ data['image_data'] }}" alt="{{data['title']}}">
+                                <small class=" d-none d-sm-block d-md-block card-title text-white">{{data['title']}}</small>
+                              </div>
+                              <div class="text-start align-items-start pt-1" style="font-size: 1rem!important;">
+                                  <small class="text-start align-items-start  d-none d-sm-block d-md-block text-muted">
+                                    {{ data['announce_username'] }}
+                                    {% if data['announce_username']  in session %}
+                                        <img class="img-fluid " src="/static/assets/image/greenball.jpg" style="height: 8px; width: auto;" alt="online">
+                                    {% endif %}
+                                </small>
+                              </div>
+                            </div>
+                            <span class="badge bg-primary rounded-pill ">14</span>
+                          {% endfor %}
+                        </li>
+                        {% endif %}
+                        {# NEW CHAT MESSAGES END #}
                         <!-- List of messages-->
                         <ol class="list-group list-group-numbered">
-                            <li class="list-group-item d-flex justify-content-between align-items-start">
+                          {% for messages in user_messages %}
+                            <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-start active" aria-current="true">
                               <div class="ms-2 me-auto">
-                                <div class="fw-bold">Subheading</div>
+                                <div class="fw-bold">The current item</div>
                                 Cras justo odio
                               </div>
                               <span class="badge bg-primary rounded-pill">14</span>
                             </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-start">
-                              <div class="ms-2 me-auto">
-                                <div class="fw-bold">Subheading</div>
-                                Cras justo odio
-                              </div>
-                              <span class="badge bg-primary rounded-pill">14</span>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-start">
-                              <div class="ms-2 me-auto">
-                                <div class="fw-bold">Subheading</div>
-                                Cras justo odio
-                              </div>
-                              <span class="badge bg-primary rounded-pill">14</span>
-                            </li>
-                          </ol>
+                          {% endfor %}
+                        </ol>
                         <!--List of messages -->
-
-                    </div>
+                  </div>
                 <div class="col-8  col-lg-8 border border-1" style="height: 400px; background-color: blue;">
             
                 </div>
-                </div>
-            </div>
+              </div>
+          </div>
         {% endif %}
 
 
 </div>
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+   
+    var listItems = document.querySelectorAll('.list-group-item-action');
+
+  
+    listItems.forEach(function (item) {
+      item.addEventListener('click', function () {
+
+        listItems.forEach(function (el) {
+          el.classList.remove('active');
+        });
+
+
+        item.classList.add('active');
+      });
+    });
+  });
+</script>
 {% endblock %}
