--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -147,12 +147,6 @@ body {
     color: #007BFF !important;
 }
 
-.price-container {
-    display: flex;
-    align-items: center;
-    margin-top: 10px;
-  }
-
   .price-container {
     display: flex;
     align-items: center;
@@ -163,6 +157,15 @@ body {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
   }
 
+  .container-message {
+ 
+  
+    margin-top: 10px;
+    padding: 10px;
+    background-color: #f8f9fa; 
+    border-radius: 8px; 
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+  }
   .price-container img {
     width: 30px;
     height: 30px;
@@ -201,6 +204,22 @@ body {
     width: 8%;
     min-width: 60px;
 }
+
+
+/* chat area*/
+.chat-area {
+    background-color: #ffffff;
+    padding: 15px;
+    height: 100vh;
+    overflow-y: auto;
+}
+
+.message {
+    margin-bottom: 15px;
+}
+/* chat area*/
+
+
 /* Styles for screens larger than 600 pixels */
 @media (max-width: 600px) {
     .list-group-numbered {
