--- a/templates/chat.html
+++ b/templates/chat.html
@@ -5,20 +5,21 @@
 {% endblock %}
 
 {% block main %}
+
 <div class="container-xxl p-lg-3 d-flex flex-column  rounded border border-1 d-block p-x-0 ">
     <div class="card-header bg-dark text-white  text-center">
         <h2 class="pt-3 title">My messages</h2>
         <hr>
 
-     
+      
         {% if new_chat == False and not user_messages %}
             <h5 class="mx-auto mt-3 pb-3 title price-container">Sorry you don't have any message yet</h5>
             <img class="img-fluid w-25 h-25 mx-auto mt-5 d-block" src="/static/assets/image/icons8-chat-100.png" alt="no messages" >
     </div>
         {% else %}
-            <div class="card-body bg-dark text-white text-center px-0 px-mb-3 rounded">
+            <div class="card-body bg-dark text-white text-center rounded">
                 <div class="row">
-                    <div class="col-4 col-md-3 col-lg-4 border border-1 mb-3 mb-lg-0 bg-white" >
+                    <div class="col-12 col-md-3 col-lg-4 border border-1 mb-3 mb-lg-0 bg-white rounded" >
                         {% if new_chat == 'True' %}
                         <!-- New Message-->
                         <li class="overflow-visible list-group-item  list-group-item-action d-flex justify-content-between align-items-start active mt-3 rounded custon-cardbord overflow-hidden " aria-current="true">
@@ -56,16 +57,75 @@
                         </ol>
                         <!--List of messages -->
                   </div>
-                <div class="col-8  col-lg-8 border border-1" style="height: 400px; background-color: blue;">
-            
-                </div>
-              </div>
+                  <div class="col-0 col-lg-8  bg-dark" style="height: 400px;">
+                    <div class="card h-100">
+                      <!--Header messa area-->
+                      <div class="card-header bg-light d-flex justify-content-between align-items-center">
+                          {% for data in announce_data %}
+                              <h6 class="text-start text-dark">{{ data['announce_username'] }}</h6>
+                              <ul class="list-unstyled text-end mb-0 d-flex flex-row">
+                                  <li class="me-5"> 
+                                      <small class="text-dark text-decoration-underline" onclick="sendForm('new_chat_form')">See announce</small>
+                                      <form id="new_chat_form" method="post" action="/myads">
+                                        <input type="hidden" name="id_announce" value="{{data['announce_id']}}">
+                                    </form>
+                                  </li>
+                                  <li class="me-4"> 
+                                      <small class="text-dark">anuncio</small>
+                                  </li>
+                              </ul>
+                              {% if data['announce_username'] in session %}
+                                  <img class="img-fluid" src="/static/assets/image/greenball.jpg" style="height: 8px; width: auto;" alt="online">
+                              {% endif %}
+                            </div>
+                            <!--message area-->
+                              <div class="card-body chat-area">
+                                <div class="message text-start text-dark">
+                                    {% for msg in messages %}
+                                    <div class="container-message">
+                                        <strong>{{ data['announce_username'] }}:</strong> {{ msg['message_text'] }}
+                                        <div class="text-start">
+                                            <small class="text-dark">{{ msg['timestamp'] }}</small>
+                                        </div>
+                                    </div>
+                                    {% endfor %}
+                                </div>
+                                <div class="message text-end  text-light" style="align-items: end!important;">
+                                    {% for user_sender in sender_messages %} 
+                                   
+                                   
+                                      <div class="text-end custon-cardbord container-message" >
+                                          <strong >You:</strong> {{user_sender['message_text']}}
+                                          <div>
+
+                                            <small class="text-light"> {{user_sender['timestamp']}}
+                                            </small>
+                                          </div>
+                                        </div>
+                                   
+                                    {% endfor %}
+                                </div>
+                            </div>
+
+                          <!--form area-->
+                          <div class="card-footer justify-content-between d-flex align-items-start ">
+                            <form id="sendMessageForm" class="container-message" method="post" action="/chat">
+                              <input type="hidden" name="receiver_user_id" value="{{ data['announce_username'] }}">
+                              <input type="hidden" name="announce_id" value="{{ data['announce_id'] }}">
+                              <input type="text" id="messageInput" name="message_action" placeholder="Send your message...">
+                              <button onclick="sendForm(formId)">Send</button>
+                            </form>
+                          </div>
+                          <!--form area-->
+                        {% endfor %}
+            </div>
           </div>
         {% endif %}
-
-
 </div>
+
+
 <script>
+
   document.addEventListener('DOMContentLoaded', function () {
    
     var listItems = document.querySelectorAll('.list-group-item-action');
@@ -83,5 +143,21 @@
       });
     });
   });
+
+  function sendForm(formId) {
+        document.getElementById(formId).submit();
+    }
+
+
+
+
 </script>
 {% endblock %}
+
+
+<!--                            <form id="message-form" class="w-100 d-flex flex-row" autocomplete="off">
+                              <input id="message-input" type="text" class="w-100 rounded">
+                              <button type="button" class="btn btn-light text-secondary btn-outline bg-light" id="announceBtn">
+                                  Send
+                              </button>
+                            </form> -->
