--- a/templates/register.html
+++ b/templates/register.html
@@ -89,9 +89,9 @@
                                     I have read and understand the terms.
                                 </label>
                             </div>
-                            <small class="text-dark">
-                                Read our <a href="/term" class="text-white text-decoration-underline">terms</a>.
-                            </small>
+                            <small class="text-dark" id="terms-link">
+                                Read our terms
+                              </small>
                         </div>
                         <div class="d-flex flex-column align-items-center pt-3" id="button-register">
                             <button type="submit" class="btn btn-primary rounded-pill btn-lg bg-white text-dark tw-bold " id="pulseButton" >Register</button>
